# MaternaSquad

./: .env.example  .gcloudignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
a2a_agents/: __init__.py  _base.py
a2a_agents/coverage_agent/: __init__.py  agent.py
a2a_agents/coverage_agent/prompts/: system.md
a2a_agents/education_agent/: __init__.py  agent.py
a2a_agents/education_agent/prompts/: system.md
a2a_agents/orchestrator/: __init__.py  agent.py  routing.py
a2a_agents/orchestrator/prompts/: system.md
a2a_agents/postpartum_watch/: __init__.py  agent.py
a2a_agents/postpartum_watch/prompts/: system.md
a2a_agents/risk_agent/: __init__.py  agent.py
a2a_agents/risk_agent/prompts/: system.md
a2a_agents/tests/: test_orchestrator_routing.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  HACKATHON_NOTES.md  MARKETPLACE_LISTINGS.md  SUBMISSION_KIT.md  TECHNICAL_BRIEF.md
infrastructure/: Dockerfile.agent  Dockerfile.mcp  cloudbuild.yaml  deploy.ps1
mcp_server/: __init__.py
mcp_server/prompts/: pa_narrative.md  patient_message.md  triage.md
mcp_server/src/: __init__.py  audit.py  gemini.py  prompts.py  server.py
mcp_server/src/fhir/: __init__.py  client.py
mcp_server/src/sharp/: __init__.py  context.py
mcp_server/src/tools/: __init__.py  (+5 more)
mcp_server/tests/: test_risk_tools.py  test_sharp_context.py
scripts/: run_agents.ps1  run_mcp.ps1  setup.ps1  smoke_test.ps1  start_hapi.ps1  stop_hapi.ps1
synthea/: generate_personas.ps1  load_to_hapi.ps1  personas.json
synthea/modules/: severe_maternal_morbidity_postpartum.json
