[project]
name = "maternasquad"
version = "0.1.0"
description = "Multi-agent maternal care system for Agents Assemble Healthcare AI Hackathon"
requires-python = ">=3.11"
authors = [{ name = "Rheonics Systems" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastmcp>=2.0.0",
    "anthropic>=0.40.0",
    "fhir.resources>=7.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.115.0",
    "tenacity>=8.4.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "a2a_agents*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "A", "C4", "T20", "PT", "RET", "SIM", "ARG"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mcp_server/tests", "a2a_agents/tests"]
